<resources>
    <string name="app_name">Quiz: Quantum Mechanics</string>
    <string name="welcome">Welcome!</string>
    <string name="intro1">How much do you know about the building blocks of life, the universe and everything?</string>
    <string name="intro2">Take this Quiz to see if you can separate your muons from your mesons.</string>
    <string name="nameQuestion">So before starting, what is your name?</string>
    <string name="hintName">John</string>
    <string name="hintAnswer">Your Answer</string>
    <string name="through">Through</string>
    <string name="the">The</string>
    <string name="ready">Ready?</string>
    <string name="go">GO!</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="questionTitle1">Question 1</string>
    <string name="questionTitle2">Question 2</string>
    <string name="questionTitle3">Question 3</string>
    <string name="questionTitle4">Question 4</string>
    <string name="questionTitle5">Question 5</string>
    <string name="questionTitle6">Question 6</string>
    <string name="questionTitle7">Question 7</string>
    <string name="questionTitle8">Question 8</string>
    <string name="questionTitle9">Question 9</string>
    <string name="questionTitle10">Question 10</string>
    <string name="question1">What is the Higgs Field theorized to be directly responsible for?</string>
    <string name="question2">Which of the below cannot be measured in a particle at the same time?</string>
    <string name="question3">Which of these quarks is the most massive?</string>
    <string name="question4">What are the 3 main neutrino prefixes?</string>
    <string name="question5">How does the energy form in which a stars emits? (One word, lowercase.)</string>
    <string name="question6">Which of the following force carriers has not yet been fully discovered, only theorized?</string>
    <string name="question7">Which particle does not have the particle wave duality?</string>
    <string name="question8">What does CMBR stand for?</string>
    <string name="question9">Which types of elementary particles make up protons and neutrons?</string>
    <string name="question10">What does the CMBR prove? (No more than two words, lowercase.)</string>
    <string name="q1a1">CMBR</string>
    <string name="q1a2">Things having polarity</string>
    <string name="q1a3">Entropy</string>
    <string name="q1a4">The weak force</string>
    <string name="q1a5">Things having mass</string>
    <string name="q2a1">The size</string>
    <string name="q2a2">The position</string>
    <string name="q2a3">The volume</string>
    <string name="q2a4">The surface area</string>
    <string name="q2a5">The momentum</string>
    <string name="q3a1">Strange quark</string>
    <string name="q3a2">Up quark</string>
    <string name="q3a3">Bottom quark</string>
    <string name="q3a4">Charm quark</string>
    <string name="q3a5">Top quark</string>
    <string name="q4a1">Neutron</string>
    <string name="q4a2">Tau</string>
    <string name="q4a3">Proton</string>
    <string name="q4a4">Gluon</string>
    <string name="q4a5">Positron</string>
    <string name="q4a6">Antiproton</string>
    <string name="q4a7">Electron</string>
    <string name="q4a8">Higgs</string>
    <string name="q4a9">Quark</string>
    <string name="q4a10">Boson</string>
    <string name="q4a11">Muon</string>
    <string name="q4a12">Photon</string>
    <string name="q6a1">W Boson</string>
    <string name="q6a2">Photon</string>
    <string name="q6a3">Z Boson</string>
    <string name="q6a4">Gluon</string>
    <string name="q6a5">Graviton</string>
    <string name="q7a1">The proton</string>
    <string name="q7a2">None</string>
    <string name="q7a3">The electron</string>
    <string name="q7a4">The tau neutrino</string>
    <string name="q8a1">Clinging macroscopic beryllium radiation</string>
    <string name="q8a2">Cosmic microwave background radiation</string>
    <string name="q8a3">Cosmology microphysics biophysical radiophysics</string>
    <string name="q8a4">Cosmic megawatt baryonic revolutions</string>
    <string name="q8a5">Cold microscopic barium radius</string>
    <string name="q9a1">Quarks</string>
    <string name="q9a2">Gluons</string>
    <string name="q9a3">Photons</string>
    <string name="q9a4">Gravitons</string>
    <string name="q9a5">Electrons</string>
    <string name="q9a6">Muons</string>

</resources>
