<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Page">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/QuestionSection">

                <TextView
                    style="@style/QuestionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/questionTitle3"
                    />

                <TextView
                    style="@style/Question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question3"
                    />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/answerGroup1">
                    <RadioButton
                        style="@style/radioButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q3a1"/>
                    <RadioButton
                        style="@style/radioButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q3a2"/>
                    <RadioButton
                        style="@style/radioButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q3a3"/>
                    <RadioButton
                        style="@style/radioButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q3a4"/>
                    <RadioButton
                        style="@style/radioButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q3a5"/>
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/QuestionSection">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:id="@+id/qb2"
                    android:layout_marginBottom="8dp"
                    android:background="?attr/colorPrimary" />
                <TextView
                    style="@style/QuestionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/questionTitle4"
                    />

                <TextView
                    style="@style/Question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question4"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/answerGroup2"
                    android:orientation="vertical">
                    <CheckBox
                        style="@style/radioButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q4a1"/>
                    <CheckBox
                        style="@style/radioButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q4a2"/>
                    <CheckBox
                        style="@style/radioButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q4a3"/>
                    <CheckBox
                        style="@style/radioButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q4a4"/>
                    <CheckBox
                        style="@style/radioButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q4a5"/>
                    <CheckBox
                        style="@style/radioButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q4a6"/>
                    <CheckBox
                        style="@style/radioButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q4a7"/>
                    <CheckBox
                        style="@style/radioButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q4a8"/>
                    <CheckBox
                        style="@style/radioButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q4a9"/>
                    <CheckBox
                        style="@style/radioButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q4a10"/>
                    <CheckBox
                        style="@style/radioButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q4a11"/>
                    <CheckBox
                        style="@style/radioButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q4a12"/>
                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                style="@style/Bottom"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center|bottom">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:id="@+id/border2"
                    android:layout_below="@id/editName"
                    android:layout_marginBottom="8dp"
                    android:background="?attr/colorPrimary" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/readyGo"
                    android:layout_below="@id/border2">

                    <Button
                        style="@style/nextButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/next"/>

                </RelativeLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
