<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Page">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/QuestionSection">

                <TextView
                    style="@style/QuestionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/questionTitle8"
                    />

                <TextView
                    style="@style/Question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question8"
                    />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/answerGroup1">
                    <RadioButton
                        style="@style/radioButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q8a1"/>
                    <RadioButton
                        style="@style/radioButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q8a2"/>
                    <RadioButton
                        style="@style/radioButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q8a3"/>
                    <RadioButton
                        style="@style/radioButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q8a4"/>
                    <RadioButton
                        style="@style/radioButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q8a5"/>
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/QuestionSection">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:id="@+id/qb2"
                    android:layout_marginBottom="8dp"
                    android:background="?attr/colorPrimary" />
                <TextView
                    style="@style/QuestionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/questionTitle9"
                    />

                <TextView
                    style="@style/Question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question9"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/answerGroup2"
                    android:orientation="vertical">
                    <CheckBox
                        style="@style/radioButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q9a1"/>
                    <CheckBox
                        style="@style/radioButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q9a2"/>
                    <CheckBox
                        style="@style/radioButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q9a3"/>
                    <CheckBox
                        style="@style/radioButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q9a4"/>
                    <CheckBox
                        style="@style/radioButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q9a5"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/QuestionSection">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:id="@+id/qb3"
                    android:layout_marginBottom="8dp"
                    android:background="?attr/colorPrimary" />
                <TextView
                    style="@style/QuestionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/questionTitle10"
                    />

                <TextView
                    style="@style/Question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question10"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/answerGroup3">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textStyle="italic"
                        android:layout_marginEnd="8dp"
                        android:text="@string/the"
                        />
                    <EditText
                        style="@style/radioButtons"
                        android:id="@+id/answer3"
                        android:gravity="center_vertical"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/hintAnswer"/>
                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                style="@style/Bottom"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center|bottom">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:id="@+id/border2"
                    android:layout_below="@id/editName"
                    android:layout_marginBottom="8dp"
                    android:background="?attr/colorPrimary" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/readyGo"
                    android:layout_below="@id/border2">

                    <Button
                        style="@style/nextButtons"
                        android:text="@string/submit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/submit"/>

                </RelativeLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
