<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Page">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/Header">

        <TextView
            style="@style/Welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            />

        <TextView
            style="@style/Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro1"
            />

        <TextView
            style="@style/Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro2"/>
    </LinearLayout>

    <RelativeLayout
        style="@style/Bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameQuestion"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:textColor="#ffff"
            android:text="@string/nameQuestion"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editName"
            android:layout_below="@id/nameQuestion"
            android:layout_centerHorizontal="true"
            android:hint="@string/hintName"
            android:layout_marginBottom="32dp"
            android:textColorHint="?attr/colorPrimaryDark"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editName">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ready"
                android:textColor="?attr/colorAccent"
                android:layout_centerInParent="true"
                android:textSize="22dp"
                android:textStyle="bold"
                android:text="@string/ready" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/go"
                android:textColor="?attr/colorPrimaryDark"
                android:text="@string/go"
                android:background = "@drawable/roundedbutton"
                android:layout_marginRight="16dp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

    </RelativeLayout>


</RelativeLayout>
